[tool.poetry]
name = "azure-apim-portal-bug"
version = "0.1.0"
description = ""
authors = ["carlos.rian <carlos.rian@quartile.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
